--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datacollect",
+  "name": "SoccerData",
   "version": "1.0.0",
   "description": "An application for data collecting for soccer stories",
   "main": "index.js",
@@ -7,7 +7,6 @@
     "start": "electron ."
   },
   "devDependencies": {
-    "electron": "~1.7.5",
-    "eslint-config-google": "^0.9.1"
+    "electron": "~1.7.5"
   }
 }
